@@ -92,16 +92,10 @@ module Spec
       
       def define_expected_method(sym)
         if target_responds_to?(sym) && !@proxied_methods.include?(sym)
-          begin
-            metaclass.__send__(:alias_method, munge(sym), sym)
-            @proxied_methods << sym
-          rescue NameError
-            rcov_needs_there_to_be_a_statement_here_or_it_will_not_record_this_brance_as_covered_even_when_it_is = true
-            # @target will eventually respond_to?(sym), but it's not implemented yet
-            # so we can't proxy it
-          end
+          metaclass.__send__(:alias_method, munge(sym), sym) if metaclass.instance_methods.include?(sym.to_s)
+          @proxied_methods << sym
         end
-
+        
         metaclass_eval(<<-EOF, __FILE__, __LINE__)
           def #{sym}(*args, &block)
             __mock_proxy.message_received :#{sym}, *args, &block
@@ -147,8 +141,12 @@ module Spec
 
       def reset_proxied_methods
         @proxied_methods.each do |sym|
-          metaclass.__send__(:alias_method, sym, munge(sym))
-          metaclass.__send__(:undef_method, munge(sym))
+          if metaclass.instance_methods.include?(munge(sym).to_s)
+            metaclass.__send__(:alias_method, sym, munge(sym))
+            metaclass.__send__(:undef_method, munge(sym))
+          else
+            metaclass.__send__(:undef_method, sym)
+          end
         end
       end
 
